# TablePick

./: .gitignore  README.md  pyproject.toml
src/cli/: __init__.py  args.py  main.py  prompt.py
src/core/: __init__.py  converter.py  output.py
src/tablepick/: __init__.py  __main__.py  error.py
src/tablepick.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/tablepick/cli/: __init__.py  args.py  main.py  prompt.py
src/tablepick/core/: get_html.py  output.py
tests/: test_cli_args.py  test_cli_main.py  test_converter.py  test_output.py  動作確認メモ.txt
