[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tablepick"
version = "0.1.0"
description = "Extract HTML tables and output as CSV/JSON."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "beautifulsoup4",
  "requests",
]
license = {text = "MIT"}
authors = [
  {name = "koume-z"},
]
keywords = ["html", "table", "csv", "json", "scraping"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries",
  "Topic :: Text Processing",
]

[project.urls]
Repository = "https://github.com/koume-z/TablePick"
Issues = "https://github.com/koume-z/TablePick/issues"

[project.scripts]
tablepick = "tablepick.cli.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["tablepick", "tablepick.*"]
